# llm-agent

./: pyproject.toml  run.py  task.md
src/llm_agent/: llm_models.py  main.py  output.py  roles.py  utils.py
src/llm_agent/parse/: code.py
tests/: response.md  test_write_files.py
